Add readme and finish prototype bigram

--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -62,13 +62,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -169,20 +162,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "The borven iove s theannokintwaim, we---trs to ar-o ad anted I ves, “Hibouerthedeloke ier Theatis l\n"
+      "0)(\"\n",
+      "thitranituncivece hextan orut s uriof oty s athe, Nourveneds corostoit ipeaif 19éRe bown.\n",
+      "beiledaig-t prd,\n",
+      "lldysshamed _Nor, ata rertureply wo on. al t aplld w iter h red, oms oustioweskad olod ousinallin cad\n",
+      "s mparensimeplithf thed cee s y PGe sthavin_ tiomate ond?\" cranthaly,”\n",
+      "couthound onenthad uacas i>EMAricade\n",
+      "\n",
+      "mp\n",
+      "emme enthe PHa medater ond w foton ckn w in wecave ge thath\n",
+      "d why ckes fr t,0°ŒAnnd ptiond Nea t we drg of\n",
+      "\n",
+      "ced thea or inilikintandve w n s h thon nghe rstoumpave mmither; jo\n"
      ]
     }
    ],
    "source": [
-    "print(decode(bigram.generate(torch.zeros(1,1, dtype=torch.long, device=device), 100)[0].tolist()))"
+    "print(decode(bigram.generate(torch.zeros(1,1, dtype=torch.long, device=device), 500)[0].tolist()))"
    ]
   }
  ],
